--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
 body {
     font-family: sans-serif;
 }
+
+.container {
+
+}
+
+.box {
+    height: 100px;
+    width: 100px;
+    border: 1px solid #000;
+}
